--- a/part5/blog-frontend/package.json
+++ b/part5/blog-frontend/package.json
@@ -17,7 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,8 @@
   "proxy": "http://localhost:3003",
   "devDependencies": {
     "@testing-library/user-event": "^14.4.3",
+    "cypress": "^10.7.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^27.0.2"
   }
 }
